NEWS
====

Versioning
----------

Releases will be numbered with the following semantic versioning format:

<major>.<minor>.<patch>

And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor
  and patch)
* New additions without breaking backward compatibility bumps the minor
  (and resets the patch)
* Bug fixes and misc changes bumps the patch


lexicon 0.2.0 -
----------------------------------------------------------------

NEW FEATURES

CHANGES

* `hash_sentiment` and `hash_sentiword` renamed to `hash_sentiment_huliu` and
  `hash_sentiment_sentiword` for consistency.


lexicon 0.1.1
----------------------------------------------------------------

NEW FEATURES

* `hash_grady_pos` added to provide a lookup of Grady's parts of speech for words.

* `hash_lemmas` added to provide a lookup of Mechura's lemmatization list.

* `hash_sentiment_jockers` and `key_sentiment_jockers` added as objects though
  they are not data objects but for all purposes act the same.  These data sets
  come from **syuzhet**'s custom dictionary built by Jockers.


lexicon 0.1.0
----------------------------------------------------------------

NEW FEATURES

* The `ratings` and `grades` keys from **sentimentr** have been moved to the
  **lexicon** package and renamed to `key_rating` and `key_grade`.

IMPROVEMENTS

* Added the positve terms 'spot on', 'on time', & 'on point' to `hash_sentiment`.


lexicon 0.0.1
----------------------------------------------------------------

This package is a collection of lexical hash tables, dictionaries, and word
lists.