@@ -44,9 +44,11 @@ Collate:
     'nrc_emotions.R'
     'pos_action_verb.R'
     'pos_adverb.R'
+    'pos_df_irregular_nouns.R'
     'pos_df_pronouns.R'
     'pos_interjections.R'
     'pos_preposition.R'
+    'pos_unchanging_nouns.R'
     'sw_buckley_salton.R'
     'sw_dolch.R'
     'sw_fry_100.R'
