@@ -1,0 +1,18 @@
+#' Irregular Nouns Word Dataframe
+#' 
+#' A dataset containing a \code{data.frame} of irregular noun singular and 
+#' plural forms.
+#' 
+#' @details 
+#' \itemize{ 
+#'   \item singular. The singular form of the noun
+#'   \item plural. The plural form of the noun
+#' } 
+#' 
+#' @docType data 
+#' @keywords datasets 
+#' @name pos_df_irregular_nouns 
+#' @usage data(pos_df_irregular_nouns) 
+#' @format A data frame with 106 rows and 2 variables 
+#' @references \url{http://www.esldesk.com/vocabulary/irregular-nouns}
+NULL 
