@@ -1,0 +1,16 @@
+#' Nouns that are the Same Plural/Singular
+#' 
+#' A dataset containing a character vector of nouns that have a single form
+#' for both singular and plural (or a singular/plural form does not exist).
+#' 
+#' @details These are a subset of irreguar nouns that are: plurale tantum,
+#' singularia tantum, or unchanging.
+#' 
+#' 
+#' @docType data 
+#' @keywords datasets 
+#' @name pos_unchanging_nouns 
+#' @usage data(pos_unchanging_nouns) 
+#' @format A character vector with 95 elements 
+#' @references  \url{https://www.vappingo.com/word-blog/101-words-that-are-both-plural-and-singular}
+NULL 
