@@ -1,36 +1,20 @@
-# hash_valence_shifters2 <- lexicon::hash_valence_shifters
-# devtools::use_data(hash_valence_shifters2, internal = TRUE, overwrite = TRUE)
-
 root <- Sys.getenv("USERPROFILE")
-repo <- pack <- basename(getwd())
-
-curd <- getwd()
-loc <- file.path(root, "Desktop")
-setwd(loc)
-
-base.git <- dirname(curd)
-
-qman <- function(x = repo, db = file.path(root, "/Dropbox/Public"), dir=loc) {
-    path <- file.path(dir, paste0(x, ".pdf"))
-    if (!file.exists(path)) stop(paste(x, "does not exist..."))
-    opath <- file.path(db, paste0(x, ".pdf"))
-    file.copy(path, opath, overwrite = TRUE)
-    message("manual copied!\n")
-}
-
+pack <- basename(getwd())
 
 quick <-  TRUE
-library(devtools)
+pdf <- FALSE
 
 unlink(paste0(pack, ".pdf"), recursive = TRUE, force = TRUE)
-x <- file.path(base.git, pack)
-document(x)
-install(x, quick = quick, build_vignettes = FALSE, dependencies = TRUE)
+devtools::document()
+devtools::install(quick = quick, build_vignettes = FALSE, dependencies = TRUE)
 
-path <- find.package(pack)
-system(paste(shQuote(file.path(R.home("bin"), "R")), 
-    "CMD", "Rd2pdf", shQuote(path)))
+if(pdf){
+    path <- find.package(pack)
+    system(paste(shQuote(file.path(R.home("bin"), "R")), "CMD", "Rd2pdf", shQuote(path)))
+    file.copy(paste0(pack, '.pdf'), file.path(root,"Desktop", paste0(pack, '.pdf')))
+    while (file.exists(paste0(pack, ".pdf"))) {unlink(paste0(pack, ".pdf"), recursive = TRUE, force = TRUE)}
+    empts <- grep("^\\.Rd", dir(all.files = TRUE), value = TRUE)
+    unlink(empts, recursive = TRUE, force = TRUE)
+}
 
-# qman(repo, dir=loc)
-setwd(curd)
 message("Done!")
