@@ -1,0 +1,117 @@
+pacman::p_load(xml2, rvest, tidyverse)
+
+## manual from: http://www.esldesk.com/vocabulary/irregular-nouns
+
+pos_df_irregular_nouns <- read.delim(text =
+'singular	plural
+addendum	addenda
+alga	algae
+alumna	alumnae
+alumnus	alumni
+analysis	analyses
+antenna	antennae
+apparatus	apparatuses
+appendix	appendices
+axis	axes
+bacillus	bacilli
+bacterium	bacteria
+basis	bases
+beau	beaux
+bison	bison
+buffalo	buffaloes
+bureau	bureaus
+bus	buses 
+cactus	cacti
+calf	calves
+child	children
+corps	corps
+corpus	corpora
+crisis	crises
+criterion	criteria
+curriculum	curricula
+datum	data
+deer	deer
+die	dice
+dwarf	dwarfs
+diagnosis	diagnoses
+echo	echoes
+elf	elves
+ellipsis	ellipses
+embargo	embargoes
+emphasis	emphases
+erratum	errata
+fireman	firemen
+fish	fish
+focus	focuses
+foot	feet
+formula	formulas
+fungus	fungi
+genus	genera
+goose	geese
+half	halves
+hero	heroes
+hippopotamus	hippopotamuses
+hoof	hooves
+hypothesis	hypotheses
+index	indices
+knife	knives
+leaf	leaves
+life	lives
+loaf	loaves
+louse	lice
+man	men
+matrix	matrices
+means	means
+medium	media
+memorandum	memoranda
+millennium	milennia
+moose	moose
+mosquito	mosquitoes
+mouse	mice
+nebula	nebulas
+neurosis	neuroses
+nucleus	nuclei
+oasis	oases
+octopus	octopuses
+ovum	ova
+ox	oxen
+paralysis	paralyses
+parenthesis	parentheses
+person	people
+phenomenon	phenomena
+potato	potatoes
+radius	radii
+scarf	scarves
+self	selves
+series	series
+sheep	sheep
+shelf	shelves
+scissors	scissors
+species	species
+stimulus	stimuli
+stratum	strata
+syllabus	syllabi
+symposium	symposiums
+synthesis	syntheses
+synopsis	synopses
+tableau	tableaux
+that	those
+thesis	theses
+thief	thieves
+this	these
+tomato	tomatoes
+tooth	teeth
+torpedo	torpedoes
+vertebra	vertebrae
+veto	vetoes
+vita	vitae
+watch	watches
+wife	wives
+wolf	wolves
+woman	women
+zero	zeros'
+)
+
+
+pax::new_data(pos_df_irregular_nouns)
+pax:::roxdat(pos_df_irregular_nouns, 'pos_df_irregular_nouns')
